docs: Add professional README and LICENSE

--- a/cyber-teacher-app/package.json
+++ b/cyber-teacher-app/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "deploy": "git add . && git commit -m \"Auto-deploy\" && git push origin main"
   },
   "dependencies": {
     "@vercel/analytics": "^1.6.1",
